# dgc-core-TP

./: README.md  dgc-wallet-build-client-js.yaml  dgc-wallet-build-client-py.yaml  dgc-wallet-build-tp-cxx.yaml  dgc-wallet-build-tp-go.yaml  dgc-wallet-build-tp-java.yaml  dgc-wallet-build-tp-js.yaml  dgc-wallet-build-tp-py.yaml  dgc-wallet-build-tp-rust.yaml  docker-compose.yaml
RESTapi/: Dockerfile  app.js
RESTapi/routes/: dgcWalletRequest.js  index.js
RESTapi/views/: loginPage.handlebars
cxxprocessor/: CMakeLists.txt  Dockerfile  build.sh  dgc-wallet-tp.cpp
goprocessor/: Dockerfile  build.sh
javaprocessor/: Dockerfile  build_java_processor.sh  pom.xml
js-client/: Dockerfile
js-client/routes/: dgcWalletRequest.js
js-client/views/: loginPage.handlebars
js-rest-api/: Dockerfile
js-rest-api/routes/: dgcRequest.js  dgcWalletRequest.js  index.js
jsclient/: Dockerfile  app.js  package.json
jsclient/routes/: auth.js  dgcWalletClient.js  dgcWalletRequest.js  index.js
jsclient/views/: loginPage.handlebars
jsprocessor/: Dockerfile  dgcWalletHandler.js  index.js  package.json
jsrestapi/: Dockerfile  package.json
processor/: Cargo.toml  Dockerfile
processor/src/: main.rs
processor/src/handler/: handler.rs  mod.rs  payload.rs  state.rs
pyclient/: Dockerfile  dgc-wallet  nose2.cfg  setup.py
pyclient/wallet/: __init__.py  (+3 more)
pyprocessor/: Dockerfile  dgc-wallet-tp
rest-api/: Cargo.toml  Dockerfile
rest-api/routes/: dgcRequest.js  index.js
rest-api/src/: lib.rs  main.rs
rust-rest-api/: Cargo.toml
rustprocessor/: Cargo.toml  Dockerfile
(+17 files in other folders)
