# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-core-rust-tp"
version = "1.0.0"
authors = ["dgc.network"]
description = "dgc-core Transaction Processor"

[dependencies]
#sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" } 
sawtooth-sdk = "^0.1"
rust-crypto = "0.2"
protobuf = "2"
clap = "2"
log = "0.4"
log4rs = "0.8"
cbor-codec = "0.7"

