# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-core-rest-api"
version = "1.0.0"
authors = ["dgc.network"]
description = "dgc-core REST api"

[dependencies]
nickel = "*"
mongodb = "*"
bson = "*"
rustc-serialize = "*"
hyper = "*"
jwt = "*"
rust-crypto = "*"