# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-core-rest-api"
version = "1.0.0"
authors = ["dgc.network"]
description = "dgc-core REST api"
edition = "2018"

[dependencies]
rouille = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
